Closes #7936 - Fix left and right `alignmentData` offsets in EventTimelineView.vue, ImageryTimeView.vue and ActivityTimeline.vue.

--- a/src/plugins/plan/plan.scss
+++ b/src/plugins/plan/plan.scss
@@ -27,11 +27,10 @@
     text {
       stroke: none;
     }
-  }
 
-  &-av {
-    // Activities view
-    @include abs();
+    .c-swimlane__lane-object {
+      display: flex;
+    }
   }
 
   &__activity {
@@ -56,5 +55,16 @@
 
   canvas {
     display: none;
+  }
+}
+
+.c-plan-av {
+  // Activities view
+  background-color: $colorPlotBg;
+  flex: 1 1 auto;
+  height: 100%;
+
+  &__svg {
+    width: 100%;
   }
 }
